--- a/module5/Presidents.html
+++ b/module5/Presidents.html
@@ -24,11 +24,11 @@
     <h1 style="text-align: center;">Data 608 - Assignment 5</h1>
     <h2 style="text-align: center;">Abdelmalek Hajjam</h2>
     <hr>
-    <h3>Part2 - for Advanced students</h3>
-    <p>Reading and manipulating data using D3.</p>
+    <h3>Part 2 - for Advanced students</h3>
+    <p>Reading and filtering Presidents File.</p>
     <p>
-        You can filter the table below by typing in president's name.
-        <br>Partial text is acceptable. Not case sensitive.
+        Type in President name in the box, or any partial name.
+        <br><strong>Note: </strong>this is note a case sensitive.
     </p>
     <form>
         <input id="president" type="text">
